...
        for i in 1...12 {
            var name = "BUS \(i)"
            var color = "#F0F0F0" // Default
            
            switch i {
            case 1: 
                name = "SAS"
                color = "#E0B084" // Darker Pastel Orange
            case 2: 
                name = "Nightmare"
                color = "#9CAFB7" // Darker Pastel Blue/Grey
            case 3: 
                name = "Dream"
...
